138123: fix UI on small screens

--- a/src/app/item-page/edit-item-page/item-bitstreams/item-bitstreams.component.scss
+++ b/src/app/item-page/edit-item-page/item-bitstreams/item-bitstreams.component.scss
@@ -54,3 +54,12 @@
 :host ::ng-deep .larger-tooltip .tooltip-inner {
   max-width: 500px;
 }
+
+.bundle-remove-warning {
+  white-space: nowrap;
+  font-size: 0.75rem;
+
+  @media (min-width: map-get($grid-breakpoints, sm)) {
+    font-size: 0.875rem;
+  }
+}
